prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/invalid_float_1.diag.txt
ERROR: malformed number
testData/diagnostics/invalid_float_1.nut:1:8

println(1e4e-4)
        ^--


